databases/redis/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: redis-cluster
  labels:
    # Prevent privilege escalation
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
    # Warn pods that use an outdated restricted policy
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
    # Audit pods using anything other than the latest version of the restricted policy
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
