databases/redis/exporter.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-exporter
  namespace: redis-cluster
  annotations:
    secret.reloader.stakater.com/reload: "redis-exporter-credentials"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-exporter
  template:
    metadata:
      labels:
        app: redis-exporter
    spec:
      containers:
        - name: redis-exporter
          image: oliver006/redis_exporter:v1.61.0
          args:
            - --is-cluster
          ports:
            - name: metrics
              containerPort: 9121
