databases/redis/exporter-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-exporter
  namespace: redis-cluster
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/scheme: http
    prometheus.io/path: /metrics
    prometheus.io/port: "9121"
spec:
  selector:
    app: redis-exporter
  type: ClusterIP
  ports:
    - name: metrics
      port: 9121
      targetPort: 9121
