databases/redis/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: redis-cluster
spec:
  selector:
    app: redis
  clusterIP: None # We're using a headless service
  ports:
    - port: 6379
      targetPort: 6379
