databases/redis/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-firewall
  namespace: redis-cluster
spec:
  podSelector:
    matchLabels:
      app: redis
  ingress:
    # Allow Redis nodes to communicate with each other over the cluster bus
    - from:
        - podSelector:
            matchLabels:
              app: redis
      ports:
        - protocol: TCP
          port: 16379
    # Allow any pod to access the cluster over the client port
    - from:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 6379
